minor alignment fixes

--- a/src/css/components/_floating-layout.scss
+++ b/src/css/components/_floating-layout.scss
@@ -2,7 +2,7 @@
 }
 
 .c-floating-layout__item {
-    @extend .my-2;
+    @extend .my-3;
 
     float: left;
     width: 100%;
